[package]
name = "lever"
version = "0.1.0"
authors = ["Luc Perkins <lucperkins@gmail.com>"]
edition = "2018"

[dependencies]
async-graphql = "2.5.8"
async-graphql-warp = "2.5.8"
async-trait = "0.1.42"
bytes = "1.0.1"
chrono = "0.4.19"
sqlx = { version = "0.5.1", features = ["json", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "1.0.24"
time = "0.2.25"
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.3"
uuid = { version = "0.8.2", features = ["v4"] }
warp = "0.3.0"
serde_json = "1.0.63"
structopt = "0.3.21"
